--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,5 @@ GOOGLE_DRIVE_CLIENT_ID=1086534505077-a8fn01o50npv6fog3l3fs3t7hrvd5skc.apps.googl
 GOOGLE_DRIVE_CLIENT_SECRET=gPmaDQr4uULD1JbMnYeB9YW2
 GOOGLE_DRIVE_REFRESH_TOKEN=1//04vtVPdRydGHeCgYIARAAGAQSNwF-L9Irvg_5CNFbLmCl6NOwmD4d_CkvRD5hRmSKr8Md-0GAapOLqVg0f0v_22vAL93CIEghPm8
 GOOGLE_DRIVE_FOLDER_ID=1F7Q3nHgXB6h_fiogE4Q3GdGFTGgMXTBW
+
+EXT_DISK_ROOM=/media/rivera/
